# agentlet

./: .gitignore  AGENTS.md  CLAUDE.md  PRODUCTION_READINESS.md  README.md  WORKFLOW.md  pyproject.toml
.agentlet/: session.jsonl
.claude/: ralph-loop.local.md
agentlet/: __init__.py
agentlet/benchmark/: __init__.py  benchmark_runner.py  harbor_agent.py  headless_user_io.py
agentlet/config/: __init__.py  settings.py
agentlet/core/: approvals.py  cache.py  circuit_breaker.py  context.py  errors.py  health.py  interrupts.py  loop.py  messages.py  metrics.py  middleware.py  parallel.py  rate_limiter.py  types.py
agentlet/llm/: __init__.py  anthropic.py  base.py  openai.py  openai_like.py  schemas.py  tokens.py
agentlet/memory/: __init__.py  memory_store.py  session_store.py
agentlet/runtime/: __init__.py  app.py  events.py  signals.py  user_io.py
agentlet/tools/: __init__.py  base.py  registry.py
apps/: cli.py  history.py  rich_ui.py
docs/: ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  cli-usage.md
docs/design-docs/: phase-1-foundation.md  phase-2-cli-experience.md  phase-3-default-tools.md  phase-3-safety-and-web-fetch-alignment.md  phase-3-tui-refinement.md
docs/exec-plans/: phase-2-cli-implementation.md
examples/transcripts/: runtime-flows.md
scripts/: test_real_api.py
src/agentlet/: __init__.py  settings.py
src/agentlet.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: REAL_API_TEST_REPORT.md  conftest.py  test_real_api.py  test_smoke.py
tests/e2e/: test_main_loop_e2e.py
tests/smoke/: test_cli_chat.py
tests/unit/: test_agent_loop.py  test_anthropic.py  test_ask_user_question_tool.py  test_bash_tool.py  test_benchmark.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_cli_approvals.py  test_cli_repl.py  test_cli_settings.py  test_cli_surface.py  test_context.py  test_context_builder.py  test_contracts.py  test_errors.py  test_fs_tools.py  test_health.py  test_integration.py  test_litellm_provider.py  test_local_fs_tools.py  test_logging.py  test_memory_stores.py  test_metrics.py  test_middleware.py  test_openai_like.py  test_parallel.py  test_provider_configs.py  (+12 more)
(+37 files in other folders)
