[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "agentlet"
version = "0.1.0"
description = "A small Python agent framework scaffold for coding and research workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
  { name = "agentlet contributors" },
]
dependencies = [
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pygments>=2.15.0",
]

[project.scripts]
agentlet = "apps.cli:main"
agentlet-benchmark = "agentlet.benchmark.benchmark_runner:main"

[dependency-groups]
dev = ["pytest>=8,<9"]

[project.optional-dependencies]
# Harbor framework for Terminal-Bench 2.0 benchmark support
# Install harbor-framework separately when running benchmarks:
#   pip install harbor-framework
benchmark = []

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["agentlet*", "apps*"]
